added cas gateway authentication

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,10 @@
-<%= @title %>
+<%#= @title %>
+
+<%#= debug params %>
+<%= debug session %>
+
+<hr>
+<%#= session.inspect %>
 
 Hello, <%= session[:cas_user] %>!
 
