added manual login and header/footer partials

--- a/app/views/static_pages/login.html.erb
+++ b/app/views/static_pages/login.html.erb
@@ -1,10 +1,48 @@
-<div class="row">
-		<div class="col-md-9 col-md-offset-1 box-container">
+<div class="page-box">
+<div class="page-box-content">
+  
+	<div id="top-box">
+	 
+	</div><!-- #top-box -->
+
+  <%= render 'header' %>
 
 
-		<div class="alert alert-danger">
-			 <ul>
-				<h1>This will be the manual login page</h1>
-			</ul>
-		</div> 
+ <div class="container">
+    <div class="row">
+
+		<form class="form-box login-form form-validator bv-form" novalidate="novalidate"><button type="submit" class="bv-hidden-submit" style="display: none; width: 0px; height: 0px;"></button>
+					  <h3 class="title">Onboarding Student Login</h3>
+					  <p>If you have an account with us, please log in.</p>
+					  
+					  <div class="form-group has-feedback">
+						<label>Email Address: <span class="required">*</span></label>
+						<input class="form-control" name="email" type="email" required="" data-bv-emailaddress-message="The input is not a valid email address" data-bv-field="email"><i class="form-control-feedback" data-bv-icon-for="email" style="display: none;"></i>
+		              <small class="help-block" data-bv-validator="emailAddress" data-bv-for="email" data-bv-result="NOT_VALIDATED" style="display: none;">The input is not a valid email address</small><small class="help-block" data-bv-validator="notEmpty" data-bv-for="email" data-bv-result="NOT_VALIDATED" style="display: none;">Please enter a value</small></div>
+					  
+					  <div class="form-group has-feedback">
+						<label>Password: <span class="required">*</span></label>
+		                <input class="form-control" name="password" type="password" required="" data-bv-field="password"><i class="form-control-feedback" data-bv-icon-for="password" style="display: none;"></i>
+		              <small class="help-block" data-bv-validator="notEmpty" data-bv-for="password" data-bv-result="NOT_VALIDATED" style="display: none;">Please enter a value</small></div>
+					  
+					  <div class="form-group">
+						<label class="checkbox">
+						  <div class="new-checkbox"><input type="checkbox"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 20 20" enable-background="new 0 0 20 20" xml:space="preserve"><polygon fill="#1e1e1e" points="9.298,13.391 4.18,9.237 3,10.079 9.297,17 17.999,4.678 16.324,3 "></polygon></svg></div> Remember password
+						</label>
+					  </div>
+					  
+					  <div class="buttons-box clearfix">
+						<button class="btn btn-default">Login</button>
+						<a href="shop-forgot.html" class="forgot">Forgot Your Password?</a>
+						<span class="required"><b>*</b> Required Field</span>
+					  </div>
+					</form>
+	</div>
 </div>
+
+</div><!-- #main -->
+
+</div><!-- .page-box-content -->
+</div><!-- .page-box -->
+
+<%= render 'footer' %>
