--- a/app/views/static_pages/login.html.erb
+++ b/app/views/static_pages/login.html.erb
@@ -13,7 +13,7 @@
 
 		<form class="form-box login-form form-validator bv-form" novalidate="novalidate"><button type="submit" class="bv-hidden-submit" style="display: none; width: 0px; height: 0px;"></button>
 					  <h3 class="title">Onboarding Student Login</h3>
-					  <p>If you have an account with us, please log in.</p>
+					  <p>Please log in with your admissions application credentials</p>
 					  
 					  <div class="form-group has-feedback">
 						<label>Email Address: <span class="required">*</span></label>
@@ -25,14 +25,14 @@
 		                <input class="form-control" name="password" type="password" required="" data-bv-field="password"><i class="form-control-feedback" data-bv-icon-for="password" style="display: none;"></i>
 		              <small class="help-block" data-bv-validator="notEmpty" data-bv-for="password" data-bv-result="NOT_VALIDATED" style="display: none;">Please enter a value</small></div>
 					  
-					  <div class="form-group">
+					 <!--  <div class="form-group">
 						<label class="checkbox">
 						  <div class="new-checkbox"><input type="checkbox"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 20 20" enable-background="new 0 0 20 20" xml:space="preserve"><polygon fill="#1e1e1e" points="9.298,13.391 4.18,9.237 3,10.079 9.297,17 17.999,4.678 16.324,3 "></polygon></svg></div> Remember password
 						</label>
-					  </div>
+					  </div> -->
 					  
 					  <div class="buttons-box clearfix">
-						<button class="btn btn-default">Login</button>
+						<button class="btn btn-danger">Login</button>
 						<a href="shop-forgot.html" class="forgot">Forgot Your Password?</a>
 						<span class="required"><b>*</b> Required Field</span>
 					  </div>
@@ -46,3 +46,47 @@
 </div><!-- .page-box -->
 
 <%= render 'footer' %>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="/assets/bootstrap.min.js"></script>
+<script src="/assets/price-regulator/jshashtable-2.1_src.js"></script>
+<script src="/assets/price-regulator/jquery.numberformatter-1.2.3.js"></script>
+<script src="/assets/price-regulator/tmpl.js"></script>
+<script src="/assets/price-regulator/jquery.dependClass-0.1.js"></script>
+<script src="/assets/price-regulator/draggable-0.1.js"></script>
+<script src="/assets/price-regulator/jquery.slider.js"></script>
+<script src="/assets/jquery.carouFredSel-6.2.1-packed.js"></script>
+<script src="/assets/jquery.touchSwipe.min.js"></script>
+<script src="/assets/jquery.elevateZoom-3.0.8.min.js"></script>
+<script src="/assets/jquery.imagesloaded.min.js"></script>
+<script src="/assets/jquery.appear.js"></script>
+<script src="/assets/jquery.sparkline.min.js"></script>
+<script src="/assets/jquery.easypiechart.min.js"></script>
+<script src="/assets/jquery.easing.1.3.js"></script>
+<script src="/assets/jquery.fancybox.pack.js"></script>
+<script src="/assets/isotope.pkgd.min.js"></script>
+<script src="/assets/jquery.knob.js"></script>
+<script src="/assets/jquery.stellar.min.js"></script>
+<script src="/assets/jquery.selectBox.min.js"></script>
+<script src="/assets/jquery.royalslider.min.js"></script>
+<script src="/assets/jquery.tubular.1.0.js"></script>
+<script src="/assets/SmoothScroll.js"></script>
+<script src="/assets/country.js"></script>
+<script src="/assets/spin.min.js"></script>
+<script src="/assets/ladda.min.js"></script>
+<script src="/assets/masonry.pkgd.min.js"></script>
+<script src="/assets/morris.min.js"></script>
+<script src="/assets/raphael.min.js"></script>
+<script src="/assets/video.js"></script>
+<script src="/assets/pixastic.custom.js"></script>
+<script src="/assets/livicons-1.4.min.js"></script>
+<script src="/assets/layerslider/layerslider.transitions.js"></script>
+<script src="/assets/layerslider/layerslider.kreaturamedia.jquery.js"></script>
+<script src="/assets/revolution/jquery.themepunch.plugins.min.js"></script>
+<script src="/assets/revolution/jquery.themepunch.revolution.min.js"></script>
+<script src="/assets/bootstrapValidator.min.js"></script>
+<script src="/assets/bootstrap-datepicker.js"></script>
+<script src="/assets/jplayer/jquery.jplayer.min.js"></script>
+<script src="/assets/jplayer/jplayer.playlist.min.js"></script>
+<script src="/assets/jquery.scrollbar.min.js"></script>
+<script src="/assets/main.js"></script>
