added lightemup debugging parameter to home.erb.html

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,11 @@
-<%#= @title %>
-
+<% if params[:lightemup] %>
 <%#= debug params %>
 <%= debug session %>
-
-<hr>
-<%#= session.inspect %>
-
 Hello, <%= session[:cas_user] %>!
+<%#= session.inspect %>
+<hr>
+<% end %>
+
 
 <div class="page-box">
 <div class="page-box-content">
