css fix to responsive layout where sidenav would draw ugly grey lines on resize

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -720,7 +720,7 @@ Hello, <%= session[:cas_user] %>!
 		  </div> -->
 		</div>
 
-       <div id="sidebar" class="col-md-3 sidebar checkout-progress">
+       <div id="sidebar" class="col-sm-3 sidebar checkout-progress">
        	<aside class="widget">
 		  <header>
 			<h3 class="title">Your Tasks</h3>
