added noscript to handle disabled javascript

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,8 +57,11 @@
 
 <body class="fixed-header">
 
+
+
 <%= yield %>
 
+<noscript>Either your browser does not support JavaScript or you have disabled Javascript! Either switch to a different browser or enable Javascript on your current browser.</noscript>
 
 
 </body>
